detail.css
.organization-info {
    padding: 20px;
    display: flex;
    width: max-content;
    justify-content: flex-end;
    flex-direction: column-reverse;
    align-items: flex-end;
}

.call-btn {
    background-color: #7100E3;
    padding: 10px 20px;
    color: white;
    border-radius: 10px;
}

.actions {
    
    display: flex;
}
.actions a{

        margin-left: 5px;
    
}

.booking-btn {
    border: 2px solid;
    background-color: #ffffff;
    padding: 10px 20px;
    color: rgb(0, 0, 0);
    border-radius: 10px;
}

.place-info-address {
    margin-top: 20px;
    width: 340px;
    height: max-content;
}

.place-info-work-schedule {
    line-height: 25px;
    margin-top: 10px;
}

.work-schedule-title {
    font-weight: 600;
}

.article-block {
    display: grid;
    grid-template-columns: 1fr  360px;
    
    gap: 10px;


}

.organization-blocks {
    margin-top: 20px;
    background-color: none;
    width: 100%;
    
    
}
.accordion{
    display: flex;
    flex-direction: column;
    width: 100%;
    margin-bottom: 5px;
}   
.accordion__content{
    display: none;
    
}
.accordion__title {

    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 16px;
    font-weight: 900;
    cursor: pointer;
    color: #ffffff;
    background-color: #7100E3;
    padding: 0 20px;
}
.accordion__title span{
    display: inline-flex;
   
   
    background-color: transparent;
    transform: rotate(0);
    transition: transform 0.5 ease-out;
}
.accordion__title:hover span{
    transform: rotate(-90deg);
}

